Fix language picker on mobile

--- a/components/LanguagePicker/LanguagePicker.scss
+++ b/components/LanguagePicker/LanguagePicker.scss
@@ -1,6 +1,18 @@
 @import '../Global/Global.scss';
 
 .language-picker {
+    &:before {
+        display: block;
+        content: '';
+        width: 200px;
+        height: 2px;
+        background-color: var(--yellow);
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, -1rem);
+    }
+    padding-top: 1rem;
+
     a {
         font-size: 0.9em;
         display: flex;
@@ -37,6 +49,10 @@
         &:hover {
             height: 6.9rem;
             box-shadow: 0px 0px 5px 5px var(--grey-light);
+        }
+
+        &::before {
+            display: none;
         }
 
         a {
